// Code generated by protoc-gen-proto. DO NOT EDIT.

// This is a compile-time assertion to ensure that this generated file
// is compatible with the proto package it is being compiled against.
// A compilation error at this line likely means your copy of the
// proto package needs to be updated.

syntax = "proto3";

package mojo.openapi;

import "mojo/core/any.proto";
import "mojo/core/regex.proto";
import "mojo/core/value.proto";
import "mojo/core/version.proto";
import "mojo/mojo.proto";
import "mojo/openapi/cached_document.proto";
import "mojo/openapi/discriminator.proto";
import "mojo/openapi/external_document.proto";
import "mojo/openapi/info.proto";
import "mojo/openapi/reference.proto";
import "mojo/openapi/referenceable_example.proto";
import "mojo/openapi/referenceable_link.proto";
import "mojo/openapi/referenceable_security_scheme.proto";
import "mojo/openapi/security_requirement.proto";
import "mojo/openapi/server.proto";
import "mojo/openapi/tag.proto";
import "mojo/openapi/xml.proto";

option go_package = "github.com/mojo-lang/openapi/go/pkg/mojo/openapi;openapi";
option java_multiple_files = true;
option java_outer_classname = "OpenapiProto";
option java_package = "org.mojolang.mojo.openapi";

enum HttpStatusCode {
    HTTP_STATUS_CODE_DEFAULT=0;
    HTTP_STATUS_CODE_CODE_200=1;
}

message Components {
    map<string, Schema> schemas = 1;
    map<string, ReferenceableResponse> responses = 2;
    map<string, ReferenceableParameter> parameters = 3;
    map<string, ReferenceableExample> examples = 4;
    map<string, ReferenceableRequestBody> request_bodies = 5;
    map<string, ReferenceableHeader> headers = 6;
    map<string, ReferenceableSecurityScheme> security_schemes = 7;
    map<string, ReferenceableLink> links = 8;
    map<string, ReferenceableCallback> callbacks = 9;
    map<string, ReferenceablePathItem> path_items = 10;
}

message OpenAPI {
    mojo.core.Version openapi = 1;
    Info info = 2;
    repeated Server servers = 4;
    Paths paths = 5;
    Components components = 10;
    SecurityRequirement security = 11;
    repeated Tag tags = 12;
    ExternalDocument external_docs = 13;
}

message Callback {
    map<string, PathItem> values = 1;
}

message Encoding {
    string content_type = 1;
    map<string, ReferenceableHeader> headers = 2;
    string style = 3;
    bool explode = 4;
    bool allow_reserved = 5;
}

message Header {
    string name = 1;
    Parameter.Location in = 2;
    string description = 3;
    bool required = 4;
    bool deprecated = 5;
    bool allow_empty_value = 6;
    Parameter.Style style = 10;
    bool explode = 11;
    bool allow_reserved = 12;
    ReferenceableSchema schema = 13;
    mojo.core.Any example = 14;
    map<string, ReferenceableExample> examples = 15;
    map<string, MediaType> content = 20;
}

message MediaType {
    ReferenceableSchema schema = 1;
    mojo.core.Any example = 2;
    map<string, ReferenceableExample> examples = 3;
    map<string, Encoding> encoding = 5;
}

message Operation {
    repeated string tags = 1;
    string summary = 2;
    CachedDocument description = 3;
    ExternalDocument external_docs = 4;
    string operation_id = 5;
    repeated ReferenceableParameter parameters = 10;
    ReferenceableRequestBody request_body = 11;
    Responses responses = 12;
    map<string, ReferenceableCallback> callbacks = 13;
    bool deprecated = 15;
    SecurityRequirement security = 16;
    repeated Server servers = 17;
}

message Parameter {
    
    enum Location {
        LOCATION_UNSPECIFIED=0;
        LOCATION_PATH=1;
        LOCATION_QUERY=2;
        LOCATION_HEADER=3;
        LOCATION_COOKIE=4;
    }
    
    enum Style {
        STYLE_UNSPECIFIED=0;
        STYLE_MATRIX=1;
        STYLE_LABEL=2;
        STYLE_FORM=3;
        STYLE_SIMPLE=4;
        STYLE_SPACE_DELIMITED=5;
        STYLE_PIPE_DELIMITED=6;
        STYLE_DEEP_OBJECT=7;
    }
    string name = 1;
    Parameter.Location in = 2;
    string description = 3;
    bool required = 4;
    bool deprecated = 5;
    bool allow_empty_value = 6;
    Parameter.Style style = 10;
    bool explode = 11;
    bool allow_reserved = 12;
    ReferenceableSchema schema = 13;
    mojo.core.Any example = 14;
    map<string, ReferenceableExample> examples = 15;
    map<string, MediaType> content = 20;
}

message PathItem {
    string ref = 1 [(mojo.alias)="$ref"];
    string summary = 2;
    CachedDocument description = 3;
    Operation get = 5;
    Operation put = 6;
    Operation post = 7;
    Operation delete = 8;
    Operation options = 9;
    Operation head = 10;
    Operation patch = 11;
    Operation trace = 12;
    repeated Server servers = 13;
    repeated ReferenceableParameter parameters = 15;
}

message RequestBody {
    CachedDocument description = 1;
    map<string, MediaType> content = 2;
    bool required = 3;
}

message Response {
    string description = 1;
    map<string, ReferenceableHeader> headers = 2;
    map<string, MediaType> content = 3;
    map<string, ReferenceableLink> links = 4;
}

message Responses {
    map<string, ReferenceableResponse> values = 1;
}

message Schema {
    
    enum Type {
        TYPE_UNSPECIFIED=0;
        TYPE_NULL=1;
        TYPE_INTEGER=2;
        TYPE_NUMBER=3;
        TYPE_STRING=4;
        TYPE_BOOLEAN=5;
        TYPE_ARRAY=6;
        TYPE_OBJECT=7;
    }
    Discriminator discriminator = 1;
    Xml xml = 2;
    ExternalDocument external_docs = 3;
    mojo.core.Any example = 4;
    string title = 10;
    CachedDocument description = 11;
    Type type = 12;
    string format = 13;
    int64 multiple_of = 14;
    double maximum = 15;
    double exclusive_maximum = 16;
    double minimum = 17;
    double exclusive_minimum = 18;
    uint64 max_length = 19;
    uint64 min_length = 20;
    mojo.core.Regex pattern = 21;
    ReferenceableSchema items = 22;
    uint64 max_items = 23;
    uint64 min_items = 24;
    bool unique_items = 25;
    map<string, ReferenceableSchema> properties = 26;
    ReferenceableSchema additional_properties = 27;
    uint64 max_properties = 28;
    uint64 min_properties = 29;
    repeated string required = 30;
    repeated mojo.core.Value enum = 31;
    repeated ReferenceableSchema all_of = 35;
    repeated ReferenceableSchema one_of = 36;
    repeated ReferenceableSchema any_of = 37;
    ReferenceableSchema not = 38;
    mojo.core.Any default = 40;
    bool nullable = 50;
    bool read_only = 51;
    bool write_only = 52;
    bool deprecated = 53;
}

message ReferenceableResponse {
    oneof referenceable_response {
        Reference reference = 1;
        Response response = 2;
    }
}

message ReferenceableParameter {
    oneof referenceable_parameter {
        Reference reference = 1;
        Parameter parameter = 2;
    }
}

message ReferenceableRequestBody {
    oneof referenceable_request_body {
        Reference reference = 1;
        RequestBody request_body = 2;
    }
}

message ReferenceableHeader {
    oneof referenceable_header {
        Reference reference = 1;
        Header header = 2;
    }
}

message ReferenceableCallback {
    oneof referenceable_callback {
        Reference reference = 1;
        Callback callback = 2;
    }
}

message ReferenceableSchema {
    oneof referenceable_schema {
        Reference reference = 1;
        Schema schema = 2;
    }
}

message Paths {
    map<string, PathItem> values = 1;
}

message ReferenceablePathItem {
    oneof referenceable_path_item {
        Reference reference = 1;
        PathItem path_item = 2;
    }
}
